--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "engines": {
     "node": "6"
   },
-  "main": ".",
+  "main": "./_build/src",
   "repository": {
     "type": "git",
     "url": "https://github.com/devpaul/arraylike-proxy"
